fixed more alignment issues with the header onthe first page

--- a/CSS/resume.css
+++ b/CSS/resume.css
@@ -43,10 +43,10 @@ This should be included on every page.
 }
 
 .no_picture_info h1 {
-	float: left;
-	font-size: 20px;
+	font-size: 30px;
 	margin: 0px 0px 0px 0px;
 	color: black;
+	text-align: right;
 }
 
 .no_picture_info p {
@@ -110,7 +110,7 @@ This should be included on every page.
 .no_picture_info .left {
 	float: left;
     width: 120px;
-    text-align: left;
+    text-align: right;
 }
 
 .no_picture_info .right {
